add W5 - not hw

--- a/DIS-CompGraphic/W3/lab03-group10/lab03-exercise03-quad.html
+++ b/DIS-CompGraphic/W3/lab03-group10/lab03-exercise03-quad.html
@@ -176,7 +176,7 @@
             )
 
             gl.useProgram(program);
-            gl.drawArrays(gl.TRIANGLES, 0, positionArray/2);
+            gl.drawArrays(gl.TRIANGLES, 0, positionArray.length/2);
         }
 
         draw()
