--- a/DIS-CompGraphic/W3/lab03-exercise01-basics.html
+++ b/DIS-CompGraphic/W3/lab03-exercise01-basics.html
@@ -28,7 +28,7 @@
         // Initialization
         // -----------------------------------------
         let canvas = document.getElementById("webgl-canvas");
-        let	gl = canvas.getContext("webgl"); // WebGLRenderingContext
+        let	gl     = canvas.getContext("webgl"); // WebGLRenderingContext
         // post error if not supported
         if(!gl){ console.error("WebGL context is not available."); }
 
@@ -43,65 +43,71 @@
         // TODO: fetch shader program text from DOM (DOM basically means the HTML tags at the beginning,
         // we are looking for the scripts containing the vertex and fragment shader source code.)
         // functions to use: document.getElementById()
-        let vertexShaderElement = document.getElementById("vertexShader");
-        let fragmentShaderElement = document.getElementById("fragmentShader");
-        if (!vertexShaderElement){
-            alert("Unable to load vertex shader " + vertexShaderElement.id);
-        }
-        if (!fragmentShaderElement){
-            alert("Unable to load fragment shader " + fragmentShaderElement.id);
+
+        const getDomShaderSrc = elementId => {
+
+            const shaderElement = document.getElementById(elementId);
+            if (!shaderElement) throw new Error(`Unable to load ${elementId} shader`);
+            return shaderElement
         }
 
         // TODO: create the vertex and fragment shader objects, attach source code and compile
         // functions to use:    gl.createShader()
         //                      gl.shaderSource()
         //                      gl.compileShader()
-        let vertexShader = gl.createShader(gl.VERTEX_SHADER);
-        let fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
-
-        gl.shaderSource(vertexShader, vertexShaderElement.text);
-        gl.shaderSource(fragmentShader, fragmentShaderElement.text);
-
-        gl.compileShader(vertexShader);
-        gl.compileShader(fragmentShader);
 
 
         // TODO: check for compiler errors in vertex and fragment shader
         // functions to use:    gl.getShaderParameter() with gl.COMPILE_STATUS
         //                      gl.getShaderInfoLog()
-        if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)){
-            console.error("ERROR could not compile vertex shader.", gl.getShaderInfoLog(vertexShader));
-        }
-        if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)){
-            console.error("ERROR could not compile fragment shader.", gl.getShaderInfoLog(fragmentShader));
+
+        const createShader = (shaderType, shaderSrc) => {
+            const shader = gl.createShader(shaderType)
+            gl.shaderSource(shader, shaderSrc);
+            gl.compileShader(shader);
+
+            if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) throw new Error("Could not compile shader: ", gl.getShaderInfoLog(shader));
+
+            return shader;
         }
 
         // TODO: create shader program and attach vertex and fragment shader
         // functions to use:    gl.createProgram()
         //                      gl.attachShader()
-        let shaderProgram = gl.createProgram();
-        gl.attachShader(shaderProgram, vertexShader);
-        gl.attachShader(shaderProgram, fragmentShader);
 
         // TODO: Link Program, completing its preparation and uploading to the GPU
         // functions to use:    gl.linkProgram()
-        gl.linkProgram(shaderProgram);
 
         // TODO: Check for errors during linking
         // functions to use:    gl.getProgramParameter() with gl.LINK_STATUS
         //                      gl.getProgramInfoLog()
-        if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)){
-            console.error("ERROR link program!", gl.getProgramInfoLog(shaderProgram))
-        }
 
         // TODO: Validate that everything worked and the program is now ready to run on the GPU
         // functions to use:    gl.validateProgram()
         //                      gl.getProgramParameter() with gl.VALIDATE_STATUS
         //                      gl.getProgramInfoLog()
-        gl.validateProgram(shaderProgram);
-        if (!gl.getProgramParameter(shaderProgram, gl.VALIDATE_STATUS)){
-            console.error("ERROR validate program!", gl.getProgramInfoLog(shaderProgram));
+
+        const createShaderProgram = (vertextShaderSrc, fragmentShaderSrc) => {
+            const vertexShader   = createShader(gl.VERTEX_SHADER, vertextShaderSrc);
+            const fragmentShader = createShader(gl.FRAGMENT_SHADER, fragmentShaderSrc);
+
+            const program = gl.createProgram();
+            gl.attachShader(program, vertexShader);
+            gl.attachShader(program, fragmentShader);
+
+            gl.linkProgram(program);
+
+            if (!gl.getProgramParameter(program, gl.LINK_STATUS)) throw new Error('Error linking program', gl.getProgramInfoLog(program));
+
+            gl.validateProgram(program);
+            if (!gl.getProgramParameter(program, gl.VALIDATE_STATUS)) throw new Error('Error validating program', gl.getProgramInfoLog(program));
+
+            return program
         }
+
+        let vertexShaderElement   = getDomShaderSrc("vertexShader")
+        let fragmentShaderElement = getDomShaderSrc("fragmentShader")
+        const program = createShaderProgram(vertexShaderElement.text, fragmentShaderElement.text);
 
         // -----------------------------------------
         // Create Buffer and upload position data
@@ -116,28 +122,29 @@
 
         // TODO: create buffer object
         // functions to use:    gl.createBuffer()
-        let positionBuffer = gl.createBuffer();
 
         // TODO: bind buffer, to make it the currently active buffer
         // functions to use:    gl.bindBuffer()
-        gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer)
 
         //  TODO: set buffer data. (insert the data in positionArray to the buffer)
         // functions to use:    gl.bufferData()
-        gl.bufferData(gl.ARRAY_BUFFER, positionArray, gl.STATIC_DRAW);
+
+        const createArrayBuffer = array => {
+            let buffer = gl.createBuffer();
+            gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+            gl.bufferData(gl.ARRAY_BUFFER, array, gl.STATIC_DRAW)
+        }
 
         // -----------------------------------------
         // Connecting the Buffer to the Attribtue: Vertex Attribute Pointer
         // -----------------------------------------
         // TODO: set active shader program
         // functions to use:    gl.useProgram()
-        gl.useProgram(shaderProgram);
 
         // TODO: connect up vertex position buffer to shader attribute
         // 1. Bind Buffer again (buffer is still bound from before,
         // however later there will be more buffers, so we better do this)
         // functions to use:    gl.bindBuffer()
-        gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
 
         // 2. get Attribute location (of a_position) in the Vertex Shader
         // functions to use:    gl.getAttribLocation()
@@ -145,22 +152,31 @@
         // functions to use:    gl.enableVertexAttribArray()
         // 4. define the connection of the data in the buffer and the vertex position attribute a_position.
         // functions to use:    gl.vertexAttribPointer()
-        var attributeLocation = gl.getAttribLocation(shaderProgram, "a_position");
-        gl.enableVertexAttribArray(attributeLocation);
-        var vertexSize = 2;
-        var type = gl.FLOAT;
-        var normalized = false;
-        var stride = Float32Array.BYTES_PER_ELEMENT * 2;
-        var offset = 0;
-        gl.vertexAttribPointer(attributeLocation, vertexSize, type, normalized, stride, offset);
 
         // -----------------------------------------
         // Draw with current active shader
         // -----------------------------------------
         // TODO: execute Draw Call
         // functions to use:    gl.drawArrays()
-        let numVertices = positionArray.length / 2;
-        gl.drawArrays(gl.TRIANGLES, 0, numVertices);
+
+        const draw = () => {
+            const attributeLocation = gl.getAttribLocation(program, "a_position")
+            createArrayBuffer(positionArray);
+            gl.enableVertexAttribArray(attributeLocation);
+            gl.vertexAttribPointer(
+                attributeLocation,
+                2,
+                gl.FLOAT,
+                false,
+                2 * Float32Array.BYTES_PER_ELEMENT,
+                0
+            )
+
+            gl.useProgram(program);
+            gl.drawArrays(gl.TRIANGLES, 0, 3);
+        }
+
+        draw()
 
     </script>
 </body>
